--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,26 @@ a {
 }
 
 /*Batas Untuk Hover container-satu*/
+
+/*Container dua*/
+
+.container-dua {
+	text-align: center;
+	padding-top: 70px;
+	color: white;
+}
+.container-dua h1 {
+	font-size: 60px
+}
+.container-dua h3 {
+	margin: 10px 0 60px 0;
+}
+.container-dua button {
+	outline: none;
+	border: none;
+	background-color: #25003D;
+	padding: 12px 50px;
+	color: white;
+	font-weight: bold;
+	border-radius: 3px;
+}
